--- a/views/shared/skeleton.jade
+++ b/views/shared/skeleton.jade
@@ -4,8 +4,7 @@ html
   head
     block Head
       meta(name='viewport', content='width=device-width, initial-scale=1.5')
-      link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap.css')
-      link(rel='stylesheet', href='//stk.ikanbao.fm:3000/css/bootstrap-responsive.css')
+      link(rel='stylesheet', href='//ikanbao.fm:3000/css/bootstrap.css')
       title= page.title
 
       script
