--- a/assets/css/kan.css
+++ b/assets/css/kan.css
@@ -7,16 +7,12 @@
 
 .kan-thumbnails {
 	background: #fff;
-	border: 1px solid #c7c7c7;
+	border: 1px solid #e7e7e7;
 	padding: 20px 0;
 	margin-left: 20px;
 }
 
-.kan-thumbnail h5 {
+.kan-thumbnail h5, .kan-thumbnail p {
 	text-align: center;
 	color: #444;
-}
-
-.kan-thumbnail h5:hover {
-	text-decoration: none !important;
 }
