--- a/views/kan.jade
+++ b/views/kan.jade
@@ -15,20 +15,26 @@ block append Content
 					p
 						a(href='')
 							img.img-polaroid(data-src='holder.js/170x200')
-					h3= kan.name
+					h3 #{kan.name}
 					p 描述: #{kan.description}
 					p 标签: #{kan.tags}
+					p
+						.btn-group
+							a.btn @创刊人
+							a.btn 编辑
 
 			// issues' list
 			.span8
 				ul.kan-thumbnails.thumbnails
 					
-					-var i = 1
+					-var i = 0
 					for issue in issues
+						i = issue.id.match(/\d+$/)[0]
 						li(style='width:20%')
-							a.kan-thumbnail.thumbnail(href='#')
-								img(data-src='holder.js/140x150')
-								h5 第#{i++}期
+							a.kan-thumbnail.thumbnail(href='#{kan.name}/#{i}')
+								img(data-src='holder.js/140x140')
+								h5 第#{i}期
+								p #{issue.date.format('yyyy年m月d日')}
 
 					// 分页Component
 					.clearfix
