--- a/views/issue.jade
+++ b/views/issue.jade
@@ -38,10 +38,11 @@ block append Content
 			canvas#mainCanvas
 
 		#reader-controller
-			span.rc-btn.prev-btn
-				i.icon.icon-chevron-left
 			span.rc-btn.list-btn
 				i.icon.icon-th-list
+			span.rc-btn.prev-btn
+				i.icon.icon-chevron-left
+			span.rc-label#rc-page-nav
 			span.rc-btn.next-btn
 				i.icon.icon-chevron-right
 			span.rc-btn.toggle-btn
