--- a/views/settings.jade
+++ b/views/settings.jade
@@ -5,6 +5,8 @@ extends shared/sidebar-and-content
 block append head
 
 	link(rel='stylesheet', href='/css/settings.css')
+	script
+		ENV.pageID = 5
 
 block append content
 
